# sql-query-optimizer

./: .gitignore  Dockerfile  HF_README.md  README.md  app.py  clamp_note.txt  db.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py  validate_local.py
server/: app.py
static/: index.html
