[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-query-optimizer"
version = "1.0.0"
description = "OpenEnv RL environment for SQL query optimization"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "openai>=2.7.2",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/dkAmulet/sql-query-optimizer"
Repository = "https://github.com/digantk31/sql-query-optimizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
